CheckIn:Fix bugzilla bug122181 Property Binding tab should show descriptive name for property

--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.properties
@@ -13,8 +13,10 @@
 ###############################################################################
 # NLS String
 ###############################################################################
-datasource.name=XML Data Source
-dataset.name=XML Data Set
+datasource.property.odaDriverClass=JDBC Driver Class
+datasource.property.odaURL=JDBC Driver URL
+datasource.property.odaDataSource=Data Source
+datasource.property.odaUser=User Name
+datasource.property.odaPassword=Password
 
-datasource.property.xmlFile=XML Data Source File
-datasource.property.schemaFile=XML Schema File
+dataset.property.queryTimeOut=Query Time Out (in seconds)
