CheckIn:Correct a clerical error in plugin file

--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -60,7 +60,7 @@
                      isEncryptable="true"
                      type="string"
                      canInherit="true"
-                     defaultDisplayName="datasource.property.odaPassword"
+                     defaultDisplayName="%datasource.property.odaPassword"
                      name="odaPassword"/>
             </propertyGroup>
             <propertyVisibility name="odaDataSource" visibility="hide"/>
