--- a/testsuites/org.eclipse.birt.report.tests.chart/.classpath
+++ b/testsuites/org.eclipse.birt.report.tests.chart/.classpath
@@ -2,15 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="/org.eclipse.birt.core/lib/js.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.birt.chart.device.extension"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.birt.chart.engine"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.birt.chart.engine.extension"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.birt.core"/>
-	<classpathentry kind="lib" path="D:/Eclipse3.1/plugins/org.eclipse.emf.ecore_2.1.0.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse3.1/plugins/org.eclipse.emf.common_2.1.0.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse3.1/plugins/org.eclipse.swt.win32.win32.x86_3.1.0.jar"/>
-	<classpathentry kind="lib" path="D:/Eclipse3.1/plugins/org.eclipse.swt_3.1.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.eclipse.birt.chart.device.svg"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
