--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
@@ -27,10 +27,10 @@ MISSING_STRUCT_DEFN=Missing structure definition for structure list type propert
 UNREFERENCABLE_STRUCT_DEFN=Structure definition is not referencable for structure reference type property [{0}].
 MISSING_ELEMENT_TYPE=Missing element reference for element reference type property [{0}].
 UNDEFINED_ELEMENT_TYPE=Element [{0}] referenced by property [{1}] is not defined.
-UNNAMED_ELEMENT_TYPE=Element [{0}] referenced by property [{1}] is an unnamed element(namespace=='no_namespace').
+UNNAMED_ELEMENT_TYPE=Element [{0}] referenced by property [{1}] is an unnamed element(namespace==''no_namespace'').
 INCONSISTENT_PROP_TYPE=Inconsistent property [{0}], style property cannot also be intrinsic.
 MISSING_JAVA_CLASS=Element [{0}] is not abstract, java class attribute should be provided.
-JAVA_CLASS_INITIALIZE_ERROR=Java class attribute for element [{0}] is not valid, failed to instantiate for class name [{1}], maybe because it is an interface or is an abstract class or that the specified java class doesn't not provide a default constructor( or a constructor that takes no argument ). 
+JAVA_CLASS_INITIALIZE_ERROR=Java class attribute for element [{0}] is not valid, failed to instantiate for class name [{1}], maybe because it is an interface or is an abstract class or that the specified java class doesn''t not provide a default constructor( or a constructor that takes no argument ). 
 JAVA_CLASS_LOAD_ERROR=Java class attribute specified for element [{0}] is not valid, can not load the class [{1}] in the current class path.
 INVALID_ELEMENT_JAVA_CLASS=The specified element java class [{0}] is not a Design Element, that is, the class is not a kind of DesignElement.  
 DUPLICATE_METHOD_NAME=The element [{0}] has two methods with the same name [{1}].  
@@ -55,6 +55,6 @@ DUPLICATE_CHOICE_NAME=The choice with the name [{0}] already exists.
 INVALID_PROPERTY_TYPE=The property type [{0}] is invalid.
 INVALID_UNIT=The default unit "{1}" on property "{0}" is invalid.
 ENCYRPTION_EXTENSION_EXISTS=The encryption extension "{0}" exists.
-VISIBILITY_PROPERTY_NOT_FOUND=Property visibility:[{1}] on element: [{0}] doesn't point to an exsiting property.
+VISIBILITY_PROPERTY_NOT_FOUND=Property visibility:[{1}] on element: [{0}] doesn''t point to an exsiting property.
 REPORT_MISSING=The root element: report design is not defined.
 INVALID_CHOICE_VALUE=The choice value "{0}"  on property "{1}" is invalid.  
