--- a/core/org.eclipse.birt.core/plugin.xml
+++ b/core/org.eclipse.birt.core/plugin.xml
@@ -28,5 +28,6 @@
    <requires>
       <import plugin="org.eclipse.core.runtime" export="true"/>
       <import plugin="org.junit" export="true" optional="true"/>
+	  <import plugin="com.ibm.icu" export="true"/>
    </requires>
 </plugin>
