Moved Commons-codec from model to birt.core plugin

--- a/core/org.eclipse.birt.core/plugin.xml
+++ b/core/org.eclipse.birt.core/plugin.xml
@@ -23,6 +23,9 @@
       <library name="lib/servlet.jar">
          <export name="*"/>
       </library>
+      <library name="lib/commons-codec-1.3.jar">
+         <export name="*"/>
+      </library>
    </runtime>
    
    <requires>
