--- a/model/org.eclipse.birt.report.model/build.xml
+++ b/model/org.eclipse.birt.report.model/build.xml
@@ -35,7 +35,7 @@
 	<!-- Class Path -->
 	<path id="class.path">
 		<pathelement path="${build.dir}" />
-		<pathelement path="${lib.dir}\commons-codec-1.3.jar" />
+		<pathelement path="${core.dir}\commons-codec-1.3.jar" />
 		<pathelement path="${core.dir}\core.jar" />
 		<pathelement path="${core.dir}\lib\junit.jar" />
 		<pathelement path="${core.dir}\lib\js.jar" />
