Enhancements in Model DTP Adapter.

--- a/model/org.eclipse.birt.report.model.adapter.oda/plugin.xml
+++ b/model/org.eclipse.birt.report.model.adapter.oda/plugin.xml
@@ -4,7 +4,13 @@
    name = "BIRT Model ODA Adapter"
    id="org.eclipse.birt.report.model.adapter.oda"
    version="2.1.0"
-   provider-name="Eclipse.org">
+   provider-name="Eclipse.org"
+   class="org.eclipse.birt.report.model.adapter.oda.plugin.ModelAdapterOdaPlugin">
+   <runtime>
+      <library name="modeloda.jar">
+         <export name="*"/>
+      </library>
+   </runtime>	
    <requires>
       <import plugin="org.eclipse.birt.core"/>
       <import plugin="org.eclipse.birt.report.model"/> 
