--- a/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
@@ -18,5 +18,7 @@ designer.ui.dir=../org.eclipse.birt.report.designer.ui
 designer.ui.jar=ui.jar
 model.dir=../org.eclipse.birt.report.model
 model.jar=model.jar
+oda.designer.ui.dir=../org.eclipse.datatools.connectivity.oda.design.ui
+oda.designer.ui.jar=odadesignui.jar
 plugin.jar=xmlui.jar
 db.dir=db
