--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
@@ -22,3 +22,22 @@ datasource.name=JDBC data source
 dataset.jdbcselect=SQL SELECT via JDBC
 datasource.editor.page.connection=Data source connection
 preference.externalEditor.title=External editor
+
+plugin.name=BIRT JDBC UI Plug-in
+oda.data.source.name=CSV JDBC Data Source
+connection.profile.name=ODA JDBC Data Source Connection Profile
+newwizard.name=ODA JDBC Data Source
+newwizard.description=Create an ODA JDBC connection profile
+wizard.window.title=New JDBC Data Source Profile
+wizard.data.source.page.title=Create a new data source
+profile.propertypage.name=JDBC Data Source
+
+oda.data.source.id=org.eclipse.birt.report.data.oda.jdbc
+oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
+#
+#  Below NLS messages apply to all ODA data sources; should be re-factored
+#
+oda.parent.category.name=ODA Data Sources
+oda.connection.factory.name=ODA Connection Factory
+ping.factory.name=Profile Ping Factory
+
