--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -20,10 +20,10 @@ wizard.message.warning=Warning
 wizard.message.warning.invaliddatasource=The provided data source information is incomplete. Would you like to continue anyway?
 tablepage.label.Applyfilter=To display only relevant tables, use the filter.
 tablepage.label.selectTable=Select one or more tables, then click the ">" button to add them to the data set.
-tablepage.label.filter=Filter:
+tablepage.label.filter=&Filter:
 tablepage.label.refresh=Refreshing...
-tablepage.label.schema=Schema:
-tablepage.button.filter=Apply Filter
+tablepage.label.schema=&Schema:
+tablepage.button.filter=&Apply Filter
 tablepage.label.filterNote=(The filter supports wildcards. '%' matches zero or more characters. '-' matches one character)
 tablepage.title=Select the tables to appear in the data set.
 tablepage.label.availableItems=Available Items:
@@ -37,15 +37,15 @@ wizard.label.selectColumns=Select one or more columns from the list.
 wizard.label.available=Available:
 wizard.label.selected=Selected:
 wizard.label.dataSourceName=Data Source Name:
-wizard.label.driverClass=Driver Class:
-wizard.label.url=Database URL:
-wizard.label.username=User Name:
-wizard.label.password=Password:
-wizard.label.testConnection=Test Connection...
-wizard.label.manageDriver=Manage Drivers...
+wizard.label.driverClass=Driver &Class:
+wizard.label.url=Database &URL:
+wizard.label.username=User N&ame:
+wizard.label.password=&Password:
+wizard.label.testConnection=&Test Connection...
+wizard.label.manageDriver=&Manage Drivers...
 wizard.label.search=Search:
 wizard.label.filter=Filter:
-tablepage.label.selecttype=Type:
+tablepage.label.selecttype=&Type:
 tablepage.filter.warning=Please specify a filter.
 wizard.message.createDataSource=Create a new data source.
 wizard.message.editDataSource=Edit the selected data source.
@@ -95,4 +95,4 @@ driverManagerDialog.error.CanNotAddDriver=Cannot add a duplicate jar file.
 driverManagerDialog.text.DriverError=Add Driver Error
 driverManagerDialog.fileDelete.title=File Delete
 driverManagerDialog.fileDelete.text=File will be deleted the next time when BIRT starts. Please be aware of that especially when exchanging different versions of driver.
-
+datasource.propertyPage.tooltip=JDBC Data Source
