CheckIn: Update Birt into ODA3.0 and add the connection profile support

--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.properties
@@ -1,1 +1,25 @@
 dataset.editor.page.query=Query
+
+# Plug-in Profile Configuration
+#
+oda.data.source.id=org.eclipse.birt.report.data.oda.sampledb
+oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
+#
+###############################################################################
+# NLS messages
+#
+plugin.name=DTP ODA Sample DB Designer
+oda.data.source.name=CSV Sample DB
+connection.profile.name=ODA Sample DB Data Source Connection Profile
+newwizard.name=ODA Sample DB Data Source
+newwizard.description=Create an ODA Sample DB connection profile
+wizard.window.title=New Sample DB Data Source Profile
+wizard.data.source.page.title=New Classic Models Inc. Sample Data Source
+profile.propertypage.name=ODA Sample DB Data Source Connection Properties
+
+#
+#  Below NLS messages apply to all ODA data sources; should be re-factored
+#
+oda.parent.category.name=ODA Data Sources
+oda.connection.factory.name=ODA Connection Factory
+ping.factory.name=Profile Ping Factory
