--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
@@ -8,8 +8,8 @@ dir.src=src
 dir.utest=utest
 birt.core.dir=../org.eclipse.birt.core
 birt.core.jar=core.jar
-dtp.oda.dir=../org.eclipse.datatools.connectivity.oda
-dtp.oda.jar=oda.jar
+oda.designer.ui.dir=../org.eclipse.datatools.connectivity.oda.design.ui
+oda.designer.ui.jar=odadesignui.jar
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.jdbc.jar=oda-jdbc.jar
 oda.jdbc.ui.dir=../org.eclipse.birt.report.data.oda.jdbc.ui
