--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -17,8 +17,7 @@
       <import plugin="org.eclipse.datatools.connectivity.oda.design.ui"/>
       <import plugin="org.eclipse.birt.report.data.oda.jdbc.ui"/>
       <import plugin="org.eclipse.birt.report.data.oda.sampledb"/>
-      <import plugin="org.eclipse.datatools.connectivity.oda"/>
-   </requires>
+  </requires>
 
    <extension
          point="org.eclipse.datatools.connectivity.connectionProfile">
@@ -29,10 +28,10 @@
             id="%oda.data.source.id"
             name="%oda.data.source.name"
             parentCategory="%oda.parent.category.id"/>
-      <configurationType id="org.eclipse.datatools.connectivity.oda.profile.dummyConfigsss"/>
+      <configurationType id="org.eclipse.datatools.connectivity.oda.profile.BIRTSampleDBConfig"/>
       <connectionProfile
             category="%oda.data.source.id"
-            configurationType="org.eclipse.datatools.connectivity.oda.profile.dummyConfigsss"
+            configurationType="org.eclipse.datatools.connectivity.oda.profile.BIRTSampleDBConfig"
             icon="icons/file.gif"
             id="%oda.data.source.id"
             name="%connection.profile.name"/>
