--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
@@ -24,13 +24,13 @@ datasource.editor.page.connection=Data source connection
 preference.externalEditor.title=External editor
 
 plugin.name=BIRT JDBC UI Plug-in
-oda.data.source.name=CSV JDBC Data Source
-connection.profile.name=ODA JDBC Data Source Connection Profile
-newwizard.name=ODA JDBC Data Source
-newwizard.description=Create an ODA JDBC connection profile
+oda.data.source.name=BIRT JDBC Data Source
+connection.profile.name=BIRT JDBC Data Source Connection Profile
+newwizard.name=BIRT JDBC Data Source
+newwizard.description=Create an BIRT JDBC connection profile
 wizard.window.title=New JDBC Data Source Profile
 wizard.data.source.page.title=Create a new data source
-profile.propertypage.name=JDBC Data Source
+profile.propertypage.name=BIRT JDBC Data Source
 
 oda.data.source.id=org.eclipse.birt.report.data.oda.jdbc
 oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
