--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.properties
@@ -8,14 +8,14 @@ oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 ###############################################################################
 # NLS messages
 #
-plugin.name=DTP ODA Sample DB Designer
-oda.data.source.name=CSV Sample DB
-connection.profile.name=ODA Sample DB Data Source Connection Profile
-newwizard.name=ODA Sample DB Data Source
-newwizard.description=Create an ODA Sample DB connection profile
+plugin.name=BIRT Sample DB Designer
+oda.data.source.name=BIRT Sample DB
+connection.profile.name=BIRT Sample DB Data Source Connection Profile
+newwizard.name=BIRT Sample DB Data Source
+newwizard.description=Create an BIRT Sample DB connection profile
 wizard.window.title=New Sample DB Data Source Profile
 wizard.data.source.page.title=New Classic Models Inc. Sample Data Source
-profile.propertypage.name=ODA Sample DB Data Source Connection Properties
+profile.propertypage.name=BIRT Sample DB Data Source Connection Properties
 
 #
 #  Below NLS messages apply to all ODA data sources; should be re-factored
