--- a/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.properties
@@ -23,14 +23,14 @@ oda.parent.category.id=org.eclipse.datatools.connectivity.oda.profileCategory
 ###############################################################################
 # NLS messages
 #
-plugin.name=ODA XML File Designer
-oda.data.source.name=CSV XML Files
-connection.profile.name=ODA XML File Data Source Connection Profile
-newwizard.name=ODA XML File Data Source
-newwizard.description=Create an ODA XML File connection profile
+plugin.name=BIRT XML File Designer
+oda.data.source.name=BIRT XML Files
+connection.profile.name=BIRT XML File Data Source Connection Profile
+newwizard.name=BIRT XML File Data Source
+newwizard.description=Create an BIRT XML File connection profile
 wizard.window.title=New XML File Data Source Profile
 wizard.data.source.page.title=Define the URLs to the XML file and schema information
-profile.propertypage.name=ODA XML File Data Source Connection Properties
+profile.propertypage.name=BIRT XML File Data Source Connection Properties
 #
 #  Below NLS messages apply to all ODA data sources; should be re-factored
 #
