CheckIn:Modify the build file for daily build failed

--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
@@ -10,6 +10,8 @@ birt.core.dir=../org.eclipse.birt.core
 birt.core.jar=core.jar
 oda.designer.ui.dir=../org.eclipse.datatools.connectivity.oda.design.ui
 oda.designer.ui.jar=odadesignui.jar
+oda.connectivity.ui.dir=../org.eclipse.datatools.connectivity.ui
+oda.connectivity.ui.jar=connectivityui.jar
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.jdbc.jar=oda-jdbc.jar
 oda.jdbc.ui.dir=../org.eclipse.birt.report.data.oda.jdbc.ui
