--- a/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
@@ -18,5 +18,7 @@ model.dir=../org.eclipse.birt.report.model
 model.jar=model.jar
 oda.designer.ui.dir=../org.eclipse.datatools.connectivity.oda.design.ui
 oda.designer.ui.jar=odadesignui.jar
+oda.connectivity.ui.dir=../org.eclipse.datatools.connectivity.ui
+oda.connectivity.ui.jar=connectivityui.jar
 plugin.jar=xmlui.jar
 db.dir=db
