--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -24,6 +24,7 @@ tablepage.label.filter=&Filter:
 tablepage.label.refresh=Refreshing...
 tablepage.label.schema=&Schema:
 tablepage.button.filter=&Apply Filter
+tablepage.button.dnd=Use identifier quoting when Drag && Drop
 tablepage.label.filterNote=(The filter supports wildcards. '%' matches zero or more characters. '-' matches one character)
 tablepage.title=Select the tables to appear in the data set.
 tablepage.label.availableItems=Available Items:
