--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin>
+<plugin
+   id="org.eclipse.birt.report.data.oda.sampledb.ui"
+   name="BIRT Sample Database UI Plug-in"
+   version="2.1.0"
+   provider-name="Eclipse.org"
+   class="org.eclipse.birt.report.data.oda.sampledb.ui.plugin.SampledbUIPlugin">
+
+   <runtime>
+      <library name="sampledbui.jar">
+         <export name="*"/>
+      </library>
+   </runtime>
+
+   <requires>
+      <import plugin="org.eclipse.ui"/>
+      <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.eclipse.birt.core"/>
+      <import plugin="org.eclipse.birt.report.model"/>
+      <import plugin="org.eclipse.birt.report.designer.ui"/>
+      <import plugin="org.eclipse.birt.report.data.oda.jdbc"/>
+      <import plugin="org.eclipse.datatools.connectivity.oda.design.ui"/>
+      <import plugin="org.eclipse.birt.report.data.oda.jdbc.ui"/>
+      <import plugin="org.eclipse.birt.report.data.oda.sampledb"/>
+  </requires>
 
    <extension
          point="org.eclipse.datatools.connectivity.connectionProfile">
