--- a/data/org.eclipse.birt.report.data.oda.sampledb/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb/plugin.xml
@@ -1,7 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin>
-   
+<plugin
+   id="org.eclipse.birt.report.data.oda.sampledb"
+   name="BIRT Sample Database"
+   version="2.1.0"
+   provider-name="Eclipse.org"
+   class="org.eclipse.birt.report.data.oda.sampledb.plugin.SampledbPlugin">
+
+   <runtime>
+      <library name="sampledb.jar">
+         <export name="*"/>
+      </library>
+   </runtime>
+
+   <requires>
+      <import plugin="org.eclipse.birt.core"/>
+      <import plugin="org.eclipse.birt.report.data.oda.jdbc"/>
+      <import plugin="org.eclipse.datatools.connectivity.oda"/>
+   </requires>
+       
    <extension
          point="org.eclipse.datatools.connectivity.oda.dataSource">
       <dataSource
