--- a/model/org.eclipse.birt.report.model/plugin.xml
+++ b/model/org.eclipse.birt.report.model/plugin.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin>
-     <extension-point id="reportItemModel" name="reportItemModel" schema="schema/reportItem.exsd"/>
+<plugin
+   id="org.eclipse.birt.report.model"
+   name="BIRT Model"
+   version="2.1.0"
+   provider-name="Eclipse.org"
+   class="org.eclipse.birt.report.model.plugin.ModelPlugin">
+   <runtime>
+      <library name="model.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/flute.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/sac.jar">
+         <export name="*"/>
+      </library>
+   </runtime>
+   <requires>
+      <import plugin="org.eclipse.birt.core"/>
+      <import plugin="org.eclipse.birt.data.oda"/>
+	  <import plugin="org.eclipse.datatools.connectivity.oda"/>
+   </requires>
+   <extension-point id="reportItemModel" name="reportItemModel" schema="schema/reportItem.exsd"/>
    <extension-point id="encryptionHelper" name="encryptionHelper" schema="schema/encryptionHelper.exsd"/>
 </plugin>
