CheckIn:Fix bugzilla bug 132429Missing Icon files in the BIRT ODA UI Download Packages

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/build.properties
@@ -1,4 +1,5 @@
 source.jdbc.jar = src/
 output.jdbc.jar = bin/
 bin.includes = plugin.xml,\
-               jdbc.jar
+               jdbc.jar,\
+               icons/
