--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
@@ -1,7 +1,8 @@
 source.ui.jar = src/
 output.ui.jar = bin/
 bin.includes = plugin.xml,\
-               ui.jar
+               ui.jar,\
+               icons/
 export.dir=exports
 dir.bin=bin
 dir.src=src
