--- a/core/org.eclipse.birt.core/build.properties
+++ b/core/org.eclipse.birt.core/build.properties
@@ -2,15 +2,26 @@ source.core.jar = src/
 output.core.jar = bin/
 bin.includes = plugin.xml,\
                core.jar,\
-               lib/,\
-               About.html,\
-               .options
+               about.html,\
+               META-INF/MANIFEST.MF,\
+               about_files/NPL-1.1.html,\
+               schema/FactoryService.exsd,\
+               META-INF/
 src.includes = plugin.xml,\
                src/,\
                BuildCore.xml,\
                test/,\
                build.properties,\
                .options,\
-               About.html
-bin.excludes = lib/junit.jar,\
-               lib/commons-logging.jar
+               about.html,\
+               core.jar,\
+               BuildCore.xml,\
+               build.properties,\
+               .classpath,\
+               .project,\
+               lib/commons-codec-1.3.jar,\
+               lib/js.jar,\
+               lib/servlet.jar,\
+               schema/FactoryService.exsd,\
+               META-INF/MANIFEST.MF,\
+               about_files/NPL-1.1.html
