--- a/data/org.eclipse.birt.data/plugin.xml
+++ b/data/org.eclipse.birt.data/plugin.xml
@@ -16,6 +16,7 @@
       <import plugin="org.eclipse.birt.core"/>
       <import plugin="org.eclipse.datatools.connectivity.oda"/>
       <import plugin="com.ibm.icu"/>
+      <import plugin="org.mozilla.rhino"/>
    </requires>
    <extension-point id="aggregation" name="Custom Aggregation Extension" schema="schema/Aggregation.exsd"/>
 </plugin>
